@startuml
interface SimpleFilter {
	+boolean include(Object item)
}

interface Iterable {
	+Iterator iterator()
}

interface Iterator {
	+boolean hasNext()
    +Object next()
}

interface  MagicalList {
    +void add(Object item)
    +int size()
    + MagicalList filter(SimpleFilter filter)_
}

class  MagicalListImpl implements  MagicalList, Iterable {
	-head : Element
	+void add(Object item)
    +int size()
    + MagicalList filter(SimpleFilter filter)
}

-class SimpleIteratorImpl implements Iterator {
}

-class Element {
	-item: Object
    -next: Element
}

Element --*  MagicalListImpl : head
Element --* Element : next
Element --+  MagicalListImpl
SimpleFilter <..  MagicalList
SimpleIteratorImpl --+  MagicalListImpl
@enduml
